<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Global Resources -->
	<string name="globalAppName">Research App #1</string>
	<string name="globalDone_str">Done</string>
	<string name="globalStart_str">Start</string>
	<string name="globalExit_str">Exit</string>
	<string name="globalTemp_str">Temporary String</string>
	
	<!-- Main Resources -->
	<string name="detectorNameLabel_str">Currently Connected Detector:</string>
	<string name="detectorName_str">&lt;Simulation&gt;</string>
	<string name="mainExitButton_str">Exit</string>
	<string name="mainImportButton_str">Import</string>
	<string name="config_str">Configuration</string>
	<string name="exportLabel_str">Export</string>
	<string name="helpLabel_str">Help</string>
	<string name="autoDetectLabel_str">Auto Detect Detector</string>
	<string name="exportExport_str">Export</string>
	<string name="mainAnalysisButton_str">Analysis Tools</string>
	<string name="mainDataManagementButton_str">Data Management</string>
	<string name="startButtonLabel_str">Start</string>
	<string name="recordLabel_str">Record</string>
	<string name="manualDetect_str">Manually Detect</string>
	
	<!-- Config Resources -->
	<string name="configAutoRescale_str">Auto Rescale Options</string>
	<string name="configRecordUntil_str">Record Until\u2026</string>
	<string name="binCount_str">Choose number of bins</string>
	<string name="entry512">512</string>
	<string name="entry1024_str">1024</string>
	<string name="entry2048_str">2048</string>
	<string name="entry4096_str">4096</string>
	<string name="numBins_str">Number of Bins</string>
	<string name="configDone_str">Done</string>
	
	<string-array name="bins">
		<item>256 Bins</item>
		<item>512 Bins</item>
		<item>1024 Bins</item>
		<item>2048 Bins</item>
		<item>4096 Bins</item>
		<item>8192 Bins</item>
		<item>Other</item>
	</string-array>
	
	<string-array name="autoResizeValues">
		<item>Full Auto Resize</item>
		<item>Auto Resize in X only</item>
		<item>Auto Resize in Y only</item>
		<item>Do Not Auto Resize</item>
	</string-array>
	
	<string-array name="recordUntilValues">
		<item>Time (sec)</item>
		<item>Time (min)</item>
		<item>Time (hour)</item>
		<item>Total Counts</item>
		<item>Max Count</item>
		<item>Statistic Point</item>
	</string-array>
	
	<!-- ImportResources -->
	<string name="importListIconDesc_str">Icon image</string>

	<!-- Export Resources -->
	<string name="exportFilename_str">Filename:</string>
	<string name="exportTimeStamp_str">Time Stamp</string>
	
	<!-- Help Resources -->
	
	<!-- Core Resources -->
	<string name="coreDoneButton_str">Done</string>
	<string name="coreSelectSpinnerDefault">No Spectrum</string>
	
	<!-- Other Resources -->
	<string name="noresourcesTextView_str">Sorry, no resources have been loaded yet :(</string>
	<string name="helpAboutButton_str">About\u2026</string>
	<string name="helpGeneralInfo_str">General Information</string>
	<string name="energyCalIsotope_str">For:</string>
	<string name="energyCalCalibrate_str">Calibrate</string>
	<string name="energyCalConfigure_str">Configure:</string>
	<string name="energyCalAddPt_str">Add Data Point</string>

</resources>