<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- CONTAINS: Config & Analysis -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/mainConfigButton_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/config_str" />
        
        <Button
            android:id="@+id/mainAnalysisButton_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainAnalysisButton_str" />

    </LinearLayout>

    <!-- CONTAINS: Import & Export -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/mainImportButton_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainImportButton_str" />
        
        <Button
            android:id="@+id/mainExportButton_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exportLabel_str" />

    </LinearLayout>

    <!-- CONTAINS: Help & Exit -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/mainHelpButton_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/helpLabel_str" />

        <Button
            android:id="@+id/mainExitButton_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainExitButton_str" />

    </LinearLayout>

    
    <!-- CONTAINS Additional Information -->
	<LinearLayout
        android:id="@+id/mainGraphSurfaceView_id"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.88"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mainDetNameLabelTextView_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detectorNameLabel_str"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/mainDetNameTextView_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detectorName_str"
            android:textAppearance="?android:attr/textAppearanceLarge" />

		<com.research.test.SpectrumView
			android:id="@+id/mainSpectrumSurfaceView_id"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>









