<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/helpAboutButton_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpAboutButton_str" />

    <Button
        android:id="@+id/helpGeneralInfoButton_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpGeneralInfo_str" />

    <Button
        android:id="@+id/helpDoneButton_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configDone_str" />

</LinearLayout>