<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="energy calibration activity"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/energyCalConfigure_nid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/energyCalConfigure_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Spinner
        android:id="@+id/energyCalSpectrumSpinner_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/energyCalForTextView_nid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/energyCalIsotope_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Spinner
        android:id="@+id/energyCalIsotopeSpinner_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:gravity="center_horizontal">
		
		<Button
	        android:id="@+id/button1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/energyCalAddPt_str" />

	    <Button
	        android:id="@+id/energyCalCalibrateButton_id"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/energyCalCalibrate_str" />
        
    </LinearLayout>
    
</LinearLayout>